[gd_scene load_steps=2 format=3 uid="uid://0txs8a7delse"]

[ext_resource type="Script" uid="uid://dy6x1a5eceo22" path="res://Scripts/upgradeScreen.gd" id="1_fukat"]

[node name="UpgradeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fukat")

[node name="Button1" type="Button" parent="."]
layout_mode = 0
offset_left = 147.0
offset_top = 74.0
offset_right = 486.0
offset_bottom = 572.0
text = "Upgrade Health and Attack"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 647.0
offset_top = 74.0
offset_right = 986.0
offset_bottom = 572.0
text = "Change a skill"

[connection signal="pressed" from="Button1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
